--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 	<title>Growfy</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240827195142">
-	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
-	<!-- <meta name="robots" content="noindex, nofollow"> -->
+	<link rel="stylesheet" href="css/style.min.css?_v=20240908192929">
+	<link rel="shortcut icon" href="favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -87,21 +85,40 @@
 			<section class="page__clients clients">
 				<div class="clients__container">
 					<h2 data-watch data-watch-once class="clients__title fadeIn">TRUSTED BY startups and large enterprises</h2>
-					<div class="clients__items">
-						<div class="clients__item">
-							<img src="img/clients/01.svg" alt="client">
+					<div class="clients__box">
+						<div class="clients__items">
+							<div class="clients__item">
+								<img src="img/clients/01.svg" alt="client">
+							</div>
+							<div class="clients__item">
+								<img src="img/clients/02.svg" alt="client">
+							</div>
+							<div class="clients__item">
+								<img src="img/clients/03.svg" alt="client">
+							</div>
+							<div class="clients__item">
+								<img src="img/clients/04.svg" alt="client">
+							</div>
+							<div class="clients__item">
+								<img src="img/clients/05.svg" alt="client">
+							</div>
 						</div>
-						<div class="clients__item">
-							<img src="img/clients/02.svg" alt="client">
-						</div>
-						<div class="clients__item">
-							<img src="img/clients/03.svg" alt="client">
-						</div>
-						<div class="clients__item">
-							<img src="img/clients/04.svg" alt="client">
-						</div>
-						<div class="clients__item">
-							<img src="img/clients/05.svg" alt="client">
+						<div class="clients__items">
+							<div class="clients__item">
+								<img src="img/clients/01.svg" alt="client">
+							</div>
+							<div class="clients__item">
+								<img src="img/clients/02.svg" alt="client">
+							</div>
+							<div class="clients__item">
+								<img src="img/clients/03.svg" alt="client">
+							</div>
+							<div class="clients__item">
+								<img src="img/clients/04.svg" alt="client">
+							</div>
+							<div class="clients__item">
+								<img src="img/clients/05.svg" alt="client">
+							</div>
 						</div>
 					</div>
 				</div>
@@ -206,7 +223,7 @@
 					<div data-watch class="advantages__items">
 						<article class="advantages__item">
 							<div class="advantages__box">
-								<h4 data-digits-counter class="advantages__value">1,2</h4>
+								<div class="advantages__value">1,2</div>
 								<div class="advantages__sign">M+</div>
 							</div>
 							<div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -215,7 +232,7 @@
 						</article>
 						<article class="advantages__item">
 							<div class="advantages__box">
-								<h4 data-digits-counter class="advantages__value">3.4</h4>
+								<div class="advantages__value">3.4</div>
 								<div class="advantages__sign">B</div>
 							</div>
 							<div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -224,7 +241,7 @@
 						</article>
 						<article class="advantages__item">
 							<div class="advantages__box">
-								<h4 data-digits-counter class="advantages__value">98</h4>
+								<div data-digits-counter class="advantages__value">98</div>
 								<div class="advantages__sign">%</div>
 							</div>
 							<div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -233,7 +250,7 @@
 						</article>
 						<article class="advantages__item ">
 							<div class="advantages__box">
-								<h4 data-digits-counter class="advantages__value">10</h4>
+								<div data-digits-counter class="advantages__value">10</div>
 								<div class="advantages__sign">+</div>
 							</div>
 							<div class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -540,7 +557,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240827195142"></script>
+	<script src="js/app.min.js?_v=20240908192929"></script>
 </body>
 
 </html>
