--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
 				<div class="why__container">
 					<img data-watch class="why__decor scale" src="img/decor.svg" alt="decor">
 					<div class="why__images images-why">
-						<div data-watch-threshold="0.1" data-watch-once data-watch class="images-why__item images-why__item_1 scale">
-							<picture><source srcset="img/why/1.webp" type="image/webp"><img src="img/why/1.jpg" alt="image"></picture>
+						<div data-watch-once data-watch class="images-why__item images-why__item_1 scale">
+							<picture><source srcset="img/why/1.webp" type="image/webp"><img data-prlx-mouse data-prlx-a="10" data-prlx-dxr=5 src="img/why/1.png" alt="image"></picture>
 						</div>
-						<div data-watch data-watch-once data-watch-threshold="0.1" class="images-why__item images-why__item_2 scale">
-							<picture><source srcset="img/why/2.webp" type="image/webp"><img src="img/why/2.jpg" alt="image"></picture>
+						<div data-watch data-watch-once class="images-why__item images-why__item_2 scale">
+							<picture><source srcset="img/why/2.webp" type="image/webp"><img data-prlx-mouse data-prlx-a="10" data-prlx-dxy=5 src="img/why/2.jpg" alt="image"></picture>
 						</div>
 					</div>
 					<div class="why__content">
